mdapipkg/unpackaged/objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notifiable_Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Notifiable Errors</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Batch Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>